--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/l_user"
+        android:id="@+id/log_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="211dp"
@@ -26,10 +26,10 @@
         android:text="log in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/l_pw" />
+        app:layout_constraintTop_toBottomOf="@+id/log_pw" />
 
     <EditText
-        android:id="@+id/l_pw"
+        android:id="@+id/log_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
@@ -37,6 +37,6 @@
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/l_user"
-        app:layout_constraintTop_toBottomOf="@+id/l_user" />
+        app:layout_constraintEnd_toEndOf="@+id/log_user"
+        app:layout_constraintTop_toBottomOf="@+id/log_user" />
 </androidx.constraintlayout.widget.ConstraintLayout>
